fix: sidebar issue, video play issue, button alignments, padding, etc...

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
   font-family: CapitoliumNews2;
 }
 
+a.selected {
+  opacity: 1;
+}
+
 ul {
   list-style: none;
   padding-left: 0;
@@ -23,7 +27,7 @@ button {
 }
 
 button i {
-  right: 20px;
+  right: 25px;
   position: absolute;
   margin-top: 5px;
 }
@@ -54,10 +58,11 @@ button i {
 .main-menu {
   width: 100px;
   background-color: #f3f3f3;
+  position: fixed;
 }
 
 .main-menu .nav-menu {
-  height: 980px;
+  height: 788px;
   background-color: #171717;
   color: white;
   display: flex;
@@ -99,7 +104,7 @@ button i {
   height: 150px;
 }
 
-.main-menu .nav-menu ul li span {
+.main-menu .nav-menu ul li a {
   transform: rotate(-90deg);
   opacity: 0.4;
   font-family: ProximaNova;
@@ -115,7 +120,12 @@ button i {
   cursor: pointer;
 }
 
-.main-menu .nav-menu ul li span:hover {
+.main-menu .nav-menu ul li a:hover {
+  opacity: 1;
+  text-decoration: none;
+}
+
+.main-menu .nav-menu ul li a:visited {
   opacity: 1;
 }
 
@@ -123,6 +133,10 @@ button i {
   width: 24px;
   height: 14px;
   margin-top: 70px;
+}
+
+.main-container {
+  margin-left: 100px;
 }
 
 .landing-page {
@@ -182,6 +196,7 @@ button i {
 .landing-page .logo-title .subtitle {
   font-size: 48px;
   letter-spacing: -2px;
+  margin-top: 20px;
 }
 
 .main-content {
@@ -250,6 +265,8 @@ button i {
   color: #ffffff;
   border: none;
   margin-top: 80px;
+  text-align: left;
+  padding-left: 25px;
 }
 
 .action-box:hover {
@@ -593,6 +610,7 @@ button i {
 @media screen and (max-width: 768px) {
   .main-container {
     width: 100%;
+    margin-left: 0;
   }
 
   .main-menu {
@@ -602,7 +620,7 @@ button i {
   .landing-page .mobile-menu-icon {
     position: absolute;
     top: 50px;
-    color: black;
+    color: white;
     width: 100px;
     height: 100px;
     display: flex;
@@ -610,12 +628,45 @@ button i {
     align-items: center;
     z-index: 12;
     right: 0;
-    background-color: white;
+    background-color: #171717;
     cursor: pointer;
   }
 
   .landing-page .mobile-menu-icon .fa {
     font-size: 24px;
+  }
+
+  .landing-page .mobile-menu-icon.opened {
+    color: #171717;
+    background-color: white;
+  }
+
+  .landing-page .mobile-menu-icon .lines {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .landing-page .mobile-menu-icon .lines .long-line {
+    width: 100%;
+    height: 1px;
+    background-color: white;
+  }
+
+  .landing-page .mobile-menu-icon .lines .half-line {
+    width: 50%;
+    height: 1px;
+    background-color: white;
+  }
+
+  .landing-page .mobile-menu-icon.opened .lines .long-line {
+    background-color: #171717;
+  }
+
+  .landing-page .mobile-menu-icon.opened .lines .half-line {
+    background-color: #171717;
   }
 
   .landing-page .mobile-menu {
@@ -795,6 +846,15 @@ button i {
   .footer .footer-logo {
     margin-bottom: 40px;
   }
+
+  .our-team .action-description {
+    width: 310px;
+    text-align: left;
+  }
+
+  .our-team .team-description {
+    text-align: left;
+  }
 }
 
 @media screen and (max-width: 375px) {
@@ -947,6 +1007,19 @@ button i {
   .footer .footer-menu li {
     margin-top: 25px;
     margin-right: 0px;
+  }
+
+  .action-box .action-title {
+    width: 320px;
+    height: auto;
+  }
+
+  .marketplace .description span {
+    width: 320px;
+  }
+
+  .action-box .action-description {
+    text-align: center;
   }
 }
 
